# 3R_manipulator

./: TrajectoryExperiment.flv
3R_Manipulator/ROS/: README.md
3R_Manipulator/ROS/src/custom_msg/: CMakeLists.txt  package.xml
3R_Manipulator/ROS/src/custom_msg/msg/: reset_COT.msg  set_angles.msg  status_arm.msg
3R_Manipulator/ROS/src/lab_arm_control/: CMakeLists.txt  package.xml
3R_Manipulator/ROS/src/lab_arm_control/launch/: Publica_Angulos.launch  Supervisorio.launch
3R_Manipulator/ROS/src/lab_arm_control/src/: Arduino_1.py  Arduino_2.py  Publica_Angulos.cpp  Trajetoria_3R.m  msg_ROS_to_Matlab.m
3R_Manipulator/ROS/src/matlab_gen/jar/: custom_msg-1.0.0.md5  lab_arm_control-0.0.0.md5
3R_Manipulator/ROS/src/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
3R_Manipulator/ROS/src/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+custom_msg/: reset_COT.m  set_angles.m  status_arm.m
3R_Manipulator/ValidacaoTrajetoria/src/supervisorio/: CMakeLists.txt  package.xml
3R_Manipulator/ValidacaoTrajetoria/src/supervisorio/launch/: supervisorio.launch
3R_Manipulator/ValidacaoTrajetoria/src/supervisorio/src/: Supervisorio.py  Terminal.py  VideoCamera.py  main.py
