<?xml version="1.0"?>
<package format="2">
  <name>custom_msg</name>
  <version>1.0.0</version>
  <description>Pacote de mensagens customizadas para uso em diversos projetos do LASER.</description>

  <maintainer email="jonathancerbaro@gmail.com">Jonathan Cerbaro</maintainer>

  <license>BSD</license>

  <author email="jonathancerbaro@gmail.com">Jonathan Cerbaro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
