<?xml version="1.0"?>
<package format="2">
  <name>lab_arm_control</name>
  <version>0.0.0</version>
  <description>The lab_arm_control package</description>

  <maintainer email="jonathancerbaro@gmail.com">Jonathan Cerbaro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>custom_msg</depend>

</package>
